# starlette-snippet

./: README.md  pyproject.toml
config/gunicorn/: local.py  prod.py
docker/: Dockerfile.dev  Dockerfile.local  Dockerfile.prod  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml
scripts/: start_dev.sh  start_local.sh  start_prod.sh
src/: app.py  context.py
src/config/settings/: base.py
src/graphql/: schema.py
